exports[`use all parts of svg-edit > check tool_source_set #0`] = `
<svg width="640" height="480" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
 <g class="layer">
  <title>Layer 1</title>
 </g>
</svg>
`;

exports[`use all parts of svg-edit > check tool_rect #0`] = `
<svg width="640" height="480" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
 <g class="layer">
  <title>Layer 1</title>
  <rect fill="#FF0000" height="50" id="svg_1" opacity="0.5" stroke="#000000" stroke-width="5" width="100" x="150" y="150">
   <animate attributeName="opacity" begin="indefinite" dur="0.2" fill="freeze" to="1"/>
  </rect>
 </g>
</svg>
`;

exports[`use all parts of svg-edit > check tool_fhrect #0`] = `
<svg width="640" height="480" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
 <g class="layer">
  <title>Layer 1</title>
  <rect fill="#FF0000" height="50" id="svg_1" stroke="#000000" stroke-width="5" width="100" x="150" y="150"/>
  <rect fill="#FF0000" height="100" id="svg_2" opacity="0.5" stroke="#000000" stroke-width="5" width="120" x="350" y="230">
   <animate attributeName="opacity" begin="indefinite" dur="0.2" fill="freeze" to="1"/>
  </rect>
 </g>
</svg>
`;

exports[`use all parts of svg-edit > check tool_square #0`] = `
<svg width="640" height="480" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
 <g class="layer">
  <title>Layer 1</title>
  <rect fill="#FF0000" height="50" id="svg_1" stroke="#000000" stroke-width="5" width="100" x="150" y="150"/>
  <rect fill="#FF0000" height="100" id="svg_2" stroke="#000000" stroke-width="5" width="120" x="350" y="230"/>
  <rect fill="#FF0000" height="50" id="svg_3" opacity="0.5" stroke="#000000" stroke-width="5" width="50" x="225" y="300">
   <animate attributeName="opacity" begin="indefinite" dur="0.2" fill="freeze" to="1"/>
  </rect>
 </g>
</svg>
`;

exports[`use all parts of svg-edit > check tool_rect_change_fill_color #0`] = `
<svg width="640" height="480" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
 <g class="layer">
  <title>Layer 1</title>
  <rect fill="#ffff00" height="50" id="svg_1" stroke="#000000" stroke-width="5" width="100" x="150" y="150"/>
  <rect fill="#FF0000" height="100" id="svg_2" stroke="#000000" stroke-width="5" width="120" x="350" y="230"/>
  <rect fill="#FF0000" height="50" id="svg_3" stroke="#000000" stroke-width="5" transform="matrix(1 0 0 1 0 0)" width="50" x="225" y="300"/>
 </g>
</svg>
`;

exports[`use all parts of svg-edit > check tool_rect_change_rotation #0`] = `
<svg width="640" height="480" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
 <g class="layer">
  <title>Layer 1</title>
  <rect fill="#ffff00" height="50" id="svg_1" stroke="#000000" stroke-width="5" transform="rotate(25 200 175)" width="100" x="150" y="150"/>
  <rect fill="#FF0000" height="100" id="svg_2" stroke="#000000" stroke-width="5" width="120" x="350" y="230"/>
  <rect fill="#FF0000" height="50" id="svg_3" stroke="#000000" stroke-width="5" transform="matrix(1 0 0 1 0 0)" width="50" x="225" y="300"/>
 </g>
</svg>
`;

exports[`use all parts of svg-edit > check tool_rect_change_blur #0`] = `
<svg width="640" height="480" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
 <g class="layer">
  <title>Layer 1</title>
  <rect fill="#ffff00" filter="url(#svg_1_blur)" height="50" id="svg_1" stroke="#000000" stroke-width="5" transform="rotate(25 200 175)" width="100" x="150" y="150"/>
  <rect fill="#FF0000" height="100" id="svg_2" stroke="#000000" stroke-width="5" width="120" x="350" y="230"/>
  <rect fill="#FF0000" height="50" id="svg_3" stroke="#000000" stroke-width="5" transform="matrix(1 0 0 1 0 0)" width="50" x="225" y="300"/>
 </g>
 <defs>
  <filter height="200%" id="svg_1_blur" width="200%" x="-50%" y="-50%">
   <feGaussianBlur in="SourceGraphic" stdDeviation="5"/>
  </filter>
 </defs>
</svg>
`;

exports[`use all parts of svg-edit > check tool_rect_change_opacity #0`] = `
<svg width="640" height="480" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
 <g class="layer">
  <title>Layer 1</title>
  <rect fill="#ffff00" filter="url(#svg_1_blur)" height="50" id="svg_1" opacity="0.5" stroke="#000000" stroke-width="5" transform="rotate(25 200 175)" width="100" x="150" y="150"/>
  <rect fill="#FF0000" height="100" id="svg_2" stroke="#000000" stroke-width="5" width="120" x="350" y="230"/>
  <rect fill="#FF0000" height="50" id="svg_3" stroke="#000000" stroke-width="5" transform="matrix(1 0 0 1 0 0)" width="50" x="225" y="300"/>
 </g>
 <defs>
  <filter height="200%" id="svg_1_blur" width="200%" x="-50%" y="-50%">
   <feGaussianBlur in="SourceGraphic" stdDeviation="5"/>
  </filter>
 </defs>
</svg>
`;

exports[`use all parts of svg-edit > check tool_fhrect_change_x_y_coordinate #0`] = `
<svg width="640" height="480" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
 <g class="layer">
  <title>Layer 1</title>
  <rect fill="#ffff00" filter="url(#svg_1_blur)" height="50" id="svg_1" opacity="0.5" stroke="#000000" stroke-width="5" transform="matrix(1 0 0 1 0 0) rotate(25 200 175)" width="100" x="150" y="150"/>
  <rect fill="#FF0000" height="100" id="svg_2" stroke="#000000" stroke-width="5" width="120" x="375" y="255"/>
  <rect fill="#FF0000" height="50" id="svg_3" stroke="#000000" stroke-width="5" transform="matrix(1 0 0 1 0 0)" width="50" x="225" y="300"/>
 </g>
 <defs>
  <filter height="200%" id="svg_1_blur" width="200%" x="-50%" y="-50%">
   <feGaussianBlur in="SourceGraphic" stdDeviation="5"/>
  </filter>
 </defs>
</svg>
`;

exports[`use all parts of svg-edit > check tool_fhrect_change_width_height #0`] = `
<svg width="640" height="480" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
 <g class="layer">
  <title>Layer 1</title>
  <rect fill="#ffff00" filter="url(#svg_1_blur)" height="50" id="svg_1" opacity="0.5" stroke="#000000" stroke-width="5" transform="matrix(1 0 0 1 0 0) rotate(25 200 175)" width="100" x="150" y="150"/>
  <rect fill="#FF0000" height="125" id="svg_2" stroke="#000000" stroke-width="5" width="145" x="375" y="255"/>
  <rect fill="#FF0000" height="50" id="svg_3" stroke="#000000" stroke-width="5" transform="matrix(1 0 0 1 0 0)" width="50" x="225" y="300"/>
 </g>
 <defs>
  <filter height="200%" id="svg_1_blur" width="200%" x="-50%" y="-50%">
   <feGaussianBlur in="SourceGraphic" stdDeviation="5"/>
  </filter>
 </defs>
</svg>
`;

exports[`use all parts of svg-edit > check tool_square_clone #0`] = `
<svg width="640" height="480" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
 <g class="layer">
  <title>Layer 1</title>
  <rect fill="#ffff00" filter="url(#svg_1_blur)" height="50" id="svg_1" opacity="0.5" stroke="#000000" stroke-width="5" transform="matrix(1 0 0 1 0 0) rotate(25 200 175)" width="100" x="150" y="150"/>
  <rect fill="#FF0000" height="125" id="svg_2" stroke="#000000" stroke-width="5" transform="matrix(1 0 0 1 0 0)" width="145" x="375" y="255"/>
  <rect fill="#FF0000" height="50" id="svg_3" stroke="#000000" stroke-width="5" width="50" x="225" y="300"/>
  <rect fill="#FF0000" height="50" id="svg_4" stroke="#000000" stroke-width="5" width="50" x="245" y="320"/>
 </g>
 <defs>
  <filter height="200%" id="svg_1_blur" width="200%" x="-50%" y="-50%">
   <feGaussianBlur in="SourceGraphic" stdDeviation="5"/>
  </filter>
 </defs>
</svg>
`;

exports[`use all parts of svg-edit > check tool_square_bring_to_back #0`] = `
<svg width="640" height="480" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
 <g class="layer">
  <title>Layer 1</title>
  <rect fill="#FF0000" height="50" id="svg_3" stroke="#000000" stroke-width="5" width="50" x="225" y="300"/>
  <rect fill="#ffff00" filter="url(#svg_1_blur)" height="50" id="svg_1" opacity="0.5" stroke="#000000" stroke-width="5" transform="matrix(1 0 0 1 0 0) rotate(25 200 175)" width="100" x="150" y="150"/>
  <rect fill="#FF0000" height="125" id="svg_2" stroke="#000000" stroke-width="5" transform="matrix(1 0 0 1 0 0)" width="145" x="375" y="255"/>
  <rect fill="#FF0000" height="50" id="svg_4" stroke="#000000" stroke-width="5" transform="matrix(1 0 0 1 0 0)" width="50" x="245" y="320"/>
 </g>
 <defs>
  <filter height="200%" id="svg_1_blur" width="200%" x="-50%" y="-50%">
   <feGaussianBlur in="SourceGraphic" stdDeviation="5"/>
  </filter>
 </defs>
</svg>
`;

exports[`use all parts of svg-edit > check tool_square_bring_to_front #0`] = `
<svg width="640" height="480" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
 <g class="layer">
  <title>Layer 1</title>
  <rect fill="#ffff00" filter="url(#svg_1_blur)" height="50" id="svg_1" opacity="0.5" stroke="#000000" stroke-width="5" transform="matrix(1 0 0 1 0 0) rotate(25 200 175)" width="100" x="150" y="150"/>
  <rect fill="#FF0000" height="125" id="svg_2" stroke="#000000" stroke-width="5" transform="matrix(1 0 0 1 0 0)" width="145" x="375" y="255"/>
  <rect fill="#FF0000" height="50" id="svg_4" stroke="#000000" stroke-width="5" transform="matrix(1 0 0 1 0 0)" width="50" x="245" y="320"/>
  <rect fill="#FF0000" height="50" id="svg_3" stroke="#000000" stroke-width="5" width="50" x="225" y="300"/>
 </g>
 <defs>
  <filter height="200%" id="svg_1_blur" width="200%" x="-50%" y="-50%">
   <feGaussianBlur in="SourceGraphic" stdDeviation="5"/>
  </filter>
 </defs>
</svg>
`;

exports[`use all parts of svg-edit > check tool_square_change_corner_radius #0`] = `
<svg width="640" height="480" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
 <g class="layer">
  <title>Layer 1</title>
  <rect fill="#ffff00" filter="url(#svg_1_blur)" height="50" id="svg_1" opacity="0.5" stroke="#000000" stroke-width="5" transform="matrix(1 0 0 1 0 0) rotate(25 200 175)" width="100" x="150" y="150"/>
  <rect fill="#FF0000" height="125" id="svg_2" stroke="#000000" stroke-width="5" transform="matrix(1 0 0 1 0 0)" width="145" x="375" y="255"/>
  <rect fill="#FF0000" height="50" id="svg_4" rx="25" ry="25" stroke="#000000" stroke-width="5" width="50" x="245" y="320"/>
  <rect fill="#FF0000" height="50" id="svg_3" stroke="#000000" stroke-width="5" transform="matrix(1 0 0 1 0 0)" width="50" x="225" y="300"/>
 </g>
 <defs>
  <filter height="200%" id="svg_1_blur" width="200%" x="-50%" y="-50%">
   <feGaussianBlur in="SourceGraphic" stdDeviation="5"/>
  </filter>
 </defs>
</svg>
`;
